# Fermata

./: .gitignore  .gitmodules  README.md  build.gradle  build.sh  gradle.properties  proguard-rules.pro  settings.gradle
.github/workflows/: build-apk.yml  build-test-apk.yml  build.yml
control/: build.gradle
control/src/main/: AndroidManifest.xml
control/src/main/res/drawable/: control.xml
control/src/main/res/drawable-anydpi-v23/: fermata_l.xml
control/src/main/res/drawable-anydpi-v26/: control.xml
control/src/main/res/values/: strings.xml
depends/: .gitignore  build.sh
depends/utils/: build.gradle  proguard-rules.pro  settings.gradle
docker/: Dockerfile  entrypoint.sh
exoplayer/: build.gradle
exoplayer/src/main/: AndroidManifest.xml
fermata/: build.gradle  google-services.json
fermata/lib/auto/: aauto.aar
fermata/src/auto/: AndroidManifest.xml
fermata/src/auto/assets/: xposed_init
fermata/src/auto/res/drawable/: add_circle.xml  back.xml  back_btn.xml  back_circle.xml  cursor.xml  home.xml  home_btn.xml  media_service.xml  media_service_bg.xml  mirror.xml  mirror_bg.xml  mirror_fs.xml  mirror_fs_bg.xml  oval_bg.xml  shutdown.xml
fermata/src/auto/res/drawable-anydpi-v26/: back_btn.xml  home_btn.xml  media_service.xml  mirror.xml  mirror_fs.xml
fermata/src/auto/res/values/: arrays.xml
fermata/src/auto/res/xml/: accessibility.xml  automotive_app_desc.xml  filepaths.xml
fermata/src/main/: AndroidManifest.xml
fermata/src/main/res/anim/: button_press.xml
fermata/src/main/res/color/: media_item.xml  media_item_border.xml  media_item_text_color.xml  media_item_tint.xml
fermata/src/main/res/drawable/: about.xml  app_background.xml  archive_label.xml  audiotrack.xml  banner.xml  cast.xml  chat.xml  chevron_right.xml  clock_bg.xml  cue.xml  done.xml  epg.xml  equalizer.xml  exit.xml  favorite.xml  favorite_filled.xml  felex.xml  fermata.xml  fermata_bg.xml  ff.xml  focusable.xml  go_to_current.xml  group_outline.xml  horizontal_split.xml  keyboard.xml  launcher.xml  m3u.xml  media_engine.xml  media_item_bg.xml  next.xml  notification.xml  outline_title_bg.xml  pause.xml  pg_down.xml  pg_up.xml  play.xml  play_pause.xml  playback_timer_bg.xml  playlist.xml  playlist_remove.xml  (+27 more)
fermata/src/main/res/drawable-anydpi-v23/: fermata_l.xml  mirror_l.xml
fermata/src/main/res/drawable-anydpi-v24/: fermata_l.xml
fermata/src/main/res/drawable-anydpi-v26/: launcher.xml  mirror_s.xml
fermata/src/main/res/layout/: audio_effects.xml  body_layout.xml  body_layout_land.xml  boolean_pref_layout.xml  nav_bar.xml  (+37 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
modules/cast/: build.gradle
modules/cast/src/debug/: AndroidManifest.xml
modules/cast/src/main/: AndroidManifest.xml
modules/chat/: build.gradle
modules/chat/src/debug/: AndroidManifest.xml
modules/chat/src/main/: AndroidManifest.xml
modules/exoplayer/: build.gradle
modules/exoplayer/src/debug/: AndroidManifest.xml
modules/exoplayer/src/main/: AndroidManifest.xml
modules/felex/: build.gradle
modules/felex/src/debug/: AndroidManifest.xml
modules/felex/src/main/: AndroidManifest.xml
modules/gdrive/: build.gradle
modules/gdrive/src/debug/: AndroidManifest.xml
modules/gdrive/src/main/: AndroidManifest.xml
modules/mlkit/: build.gradle
modules/mlkit/src/debug/: AndroidManifest.xml
modules/mlkit/src/main/: AndroidManifest.xml
modules/opusmt/: build.gradle
modules/opusmt/src/debug/: AndroidManifest.xml
modules/opusmt/src/main/: AndroidManifest.xml
modules/poi/: build.gradle
modules/poi/src/debug/: AndroidManifest.xml
modules/poi/src/main/: AndroidManifest.xml
modules/sftp/: build.gradle
modules/sftp/src/debug/: AndroidManifest.xml
modules/sftp/src/main/: AndroidManifest.xml
modules/smb/: build.gradle
modules/smb/src/debug/: AndroidManifest.xml
modules/smb/src/main/: AndroidManifest.xml
modules/tv/: build.gradle
modules/tv/src/debug/: AndroidManifest.xml
modules/tv/src/main/: AndroidManifest.xml
modules/vlc/: build.gradle
modules/vlc/src/debug/: AndroidManifest.xml
modules/vlc/src/main/: AndroidManifest.xml
modules/web/: build.gradle
modules/web/src/auto/: AndroidManifest.xml
modules/web/src/main/: AndroidManifest.xml
modules/whisper/: build.gradle
modules/whisper/src/debug/: AndroidManifest.xml
modules/whisper/src/main/: AndroidManifest.xml
modules/whisper/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
res/: build_jks.gradle  test.ks
res/icons/: toolbar.xcf
vlc/: build.gradle
vlc/src/main/: AndroidManifest.xml
(+636 files in other folders)
